feat: add directors